[gd_scene load_steps=30 format=3 uid="uid://5u2knjbvwwxe"]

[ext_resource type="Script" path="res://Assets/Chars/Igniz/Igniz.gd" id="1_di8ta"]
[ext_resource type="Texture2D" uid="uid://hho6flqpikv0" path="res://Assets/Chars/Igniz/Sprites/Igniz_0-0.png" id="1_m11ba"]
[ext_resource type="Texture2D" uid="uid://b5uqh32n02ip5" path="res://Assets/Chars/Igniz/Sprites/Igniz_0-1.png" id="2_aortn"]
[ext_resource type="Shader" path="res://Assets/Resourses/PalFX.gdshader" id="2_hb7k4"]
[ext_resource type="Texture2D" uid="uid://txfiw86w8fkx" path="res://Assets/Chars/Igniz/Sprites/Igniz_0-2.png" id="3_hdut3"]
[ext_resource type="Texture2D" uid="uid://cj1uamqvtywvo" path="res://Assets/Chars/Igniz/Sprites/Igniz_0-3.png" id="4_a5745"]
[ext_resource type="Texture2D" uid="uid://bthpygvntbmmq" path="res://Assets/Chars/Igniz/Sprites/Igniz_0-4.png" id="5_b7q56"]
[ext_resource type="Texture2D" uid="uid://lf2fnaivoyyb" path="res://Assets/Chars/Igniz/Sprites/Igniz_0-5.png" id="6_633k8"]
[ext_resource type="Texture2D" uid="uid://nq5imfxi55fa" path="res://Assets/Chars/Igniz/Sprites/Igniz_0-6.png" id="7_cmmxs"]
[ext_resource type="Texture2D" uid="uid://d23meo8ukp62" path="res://Assets/Chars/Igniz/Sprites/Igniz_0-7.png" id="8_cwmji"]
[ext_resource type="Texture2D" uid="uid://0vypvx4cdmrx" path="res://Assets/Chars/Igniz/Sprites/Igniz_0-8.png" id="9_bmkvd"]
[ext_resource type="Texture2D" uid="uid://71gja34672xf" path="res://Assets/Chars/Igniz/Sprites/Igniz_0-9.png" id="10_i5xa7"]
[ext_resource type="Texture2D" uid="uid://74nqku6xyma6" path="res://Assets/Chars/Igniz/Sprites/Igniz_0-10.png" id="11_74r28"]
[ext_resource type="Texture2D" uid="uid://dpf7c1vbmellq" path="res://Assets/Chars/Igniz/Sprites/Igniz_0-11.png" id="12_7qpqn"]
[ext_resource type="Texture2D" uid="uid://uuibe8in17yl" path="res://Assets/Chars/Igniz/Sprites/Igniz_0-12.png" id="13_36jun"]
[ext_resource type="Texture2D" uid="uid://ehojc63l28bw" path="res://Assets/Chars/Igniz/Sprites/Igniz_0-13.png" id="14_ax73e"]
[ext_resource type="Texture2D" uid="uid://b8al7d7ai3d4l" path="res://Assets/Chars/Igniz/Sprites/Igniz_0-14.png" id="15_r6inm"]
[ext_resource type="Texture2D" uid="uid://cj6xa553ux53o" path="res://Assets/Chars/Igniz/Sprites/Igniz_0-15.png" id="16_r6pxy"]
[ext_resource type="Texture2D" uid="uid://btaquexhkuxqe" path="res://Assets/Chars/Igniz/Sprites/Igniz_0-16.png" id="17_ooqvq"]
[ext_resource type="Texture2D" uid="uid://bj2ciw4mrwv3d" path="res://Assets/Chars/Igniz/Sprites/Igniz_0-17.png" id="18_ht1xj"]
[ext_resource type="Texture2D" uid="uid://c6g70spj0g3h4" path="res://Assets/Chars/Igniz/Sprites/Igniz_0-18.png" id="19_1vaop"]
[ext_resource type="Texture2D" uid="uid://dtipmxmclmc33" path="res://Assets/Chars/Igniz/Sprites/Igniz_0-19.png" id="20_rj6yt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qjn50"]
shader = ExtResource("2_hb7k4")
shader_parameter/Time = 0
shader_parameter/Add = Color(0, 0, 0, 1)
shader_parameter/Mul = Color(256, 256, 256, 1)
shader_parameter/SinAdd = Color(0, 0, 0, 1)
shader_parameter/InvertAll = false
shader_parameter/ColorScale = 256

[sub_resource type="SpriteFrames" id="SpriteFrames_xetw8"]
animations = [{
"frames": [{
"duration": 7.0,
"texture": ExtResource("1_m11ba")
}, {
"duration": 7.0,
"texture": ExtResource("2_aortn")
}, {
"duration": 7.0,
"texture": ExtResource("3_hdut3")
}, {
"duration": 7.0,
"texture": ExtResource("4_a5745")
}, {
"duration": 7.0,
"texture": ExtResource("5_b7q56")
}, {
"duration": 7.0,
"texture": ExtResource("6_633k8")
}, {
"duration": 7.0,
"texture": ExtResource("7_cmmxs")
}, {
"duration": 7.0,
"texture": ExtResource("8_cwmji")
}, {
"duration": 7.0,
"texture": ExtResource("9_bmkvd")
}, {
"duration": 7.0,
"texture": ExtResource("10_i5xa7")
}, {
"duration": 7.0,
"texture": ExtResource("11_74r28")
}, {
"duration": 7.0,
"texture": ExtResource("12_7qpqn")
}, {
"duration": 7.0,
"texture": ExtResource("13_36jun")
}, {
"duration": 7.0,
"texture": ExtResource("14_ax73e")
}, {
"duration": 7.0,
"texture": ExtResource("15_r6inm")
}, {
"duration": 7.0,
"texture": ExtResource("16_r6pxy")
}, {
"duration": 7.0,
"texture": ExtResource("17_ooqvq")
}, {
"duration": 7.0,
"texture": ExtResource("18_ht1xj")
}, {
"duration": 7.0,
"texture": ExtResource("19_1vaop")
}, {
"duration": 7.0,
"texture": ExtResource("20_rj6yt")
}],
"loop": false,
"name": &"Stand",
"speed": 60.0
}]

[sub_resource type="Animation" id="Animation_uc62w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Stand"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_efmgr"]
resource_name = "Stand"
length = 2.33334
loop_mode = 1
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Stand"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.116667, 0.233333, 0.35, 0.466667, 0.583333, 0.7, 0.816667, 0.933333, 1.05, 1.16667, 1.28333, 1.4, 1.51667, 1.63333, 1.75, 1.86667, 1.98333, 2.1, 2.21667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ttcjo"]
_data = {
"RESET": SubResource("Animation_uc62w"),
"Stand": SubResource("Animation_efmgr")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ig5m"]
size = Vector2(30, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hekes"]
size = Vector2(34, 106)

[node name="Igniz" type="CharacterBody2D"]
script = ExtResource("1_di8ta")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_qjn50")
sprite_frames = SubResource("SpriteFrames_xetw8")
animation = &"Stand"
centered = false
offset = Vector2(-129, -193)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ttcjo")
}
autoplay = "Stand"

[node name="PushBox" type="CollisionShape2D" parent="."]
position = Vector2(0, -40)
shape = SubResource("RectangleShape2D_2ig5m")
debug_color = Color(0, 1, 0, 0.419608)

[node name="StaticBody2D" type="Area2D" parent="."]
collision_mask = 2

[node name="HurtBox" type="CollisionShape2D" parent="StaticBody2D"]
physics_interpolation_mode = 2
position = Vector2(0, -53)
shape = SubResource("RectangleShape2D_hekes")
one_way_collision_margin = 128.0
debug_color = Color(0.12549, 0.376471, 1, 0.419608)
